# hyper_ai

./: .gitignore  AGENTS.md  JOURNAL.md  README.md  docker-compose.yml  init.sql
.devcontainer/: README.md  devcontainer.json
ai-course/.devcontainer/: devcontainer.json
ai-course/ai modules/ai-course-module-05/05-Tools/examples/domain-lang-mcp/: .gitignore  README.md  pyproject.toml
ai-course/ai modules/ai-course-module-05/05-Tools/examples/domain-lang-mcp/http_server/: main.py  main_test.py  tools.py  tools_test.py
ai-course/ai modules/ai-course-module-05/05-Tools/examples/domain-lang-mcp/stdio_server/: main.py  main_test.py  tools.py  tools_test.py
ai-course/ai modules/ai-course-module-05/05-Tools/examples/knowledge-graph/: .gitignore  README.md  api-server  pyproject.toml
ai-course/ai modules/ai-course-module-05/05-Tools/examples/knowledge-graph/api/: app.py  app_test.py  main.py
ai-course/ai modules/ai-course-module-05/05-Tools/examples/knowledge-graph/cli/: importer.py  importer_test.py  main.py  main_test.py  storage.py  storage_test.py
ai-course/ai modules/ai-course-module-05/05-Tools/examples/knowledge-graph/knowledge/edges/: config_service.yaml
ai-course/ai modules/ai-course-module-05/05-Tools/examples/knowledge-graph/knowledge/nodes/: config_service.yaml  feature_flags.yaml
ai-course/module1/: .gitignore  AGENTS.md  JOURNAL.md  KAFKA_SETUP.md  KAFKA_SIMPLE.md  Makefile  WINDOWS_COMMANDS.md  docker-compose.yml  init.sql
ai-course/module1/config-service/: .env  (+4 more)
memory/: ABOUT.md  ARCHITECTURE.md  CLIENT_LIBRARY.md  IMPLEMENTATION.md  KAFKA.md  REST_API_CONVERSION.md  SEPARATION_SUMMARY.md  TESTING.md
prompts/: 1-web-api-specs.md
(+179 files in other folders)
